test/resolver/test-2.nbl
var test = "test";
{
    var test = test; // error
}
